# kernel-scripts

./: .gitignore  Makefile  README.md  docker-build.sh  kernel-builder.Dockerfile  kvm-boot.sh  mk-cpio.sh  mk-diskimg.sh  pyproject.toml
docs/designs/: kbake-cli.md
kconfigs/: kconfig.arm64.minimal  kconfig.minimal
src/kbake/: __init__.py  config.py  docker.py  forge_cli.py  kernel_cli.py  paths.py  qemu.py  runner.py  target.py
src/kbake/assets/: __init__.py  kconfig.arm64.minimal  kconfig.x86_64.minimal  kernel-builder.Dockerfile  rootfs-image.sh  rootfs-initramfs.sh
src/kbake/forge/: __init__.py  builder.py  images.py
src/kbake/kernel/: __init__.py  boot.py  checkout.py  kbuild.py  shell.py
src/maildir_patches/: __init__.py  cli.py
src/patchreview/: __init__.py  cli.py  git_range.py  review.py
tests/: __init__.py  test_boot_cli.py  test_config.py  test_docker.py  test_forge_cli.py  test_kernel_build.py  test_kernel_checkout.py  test_kernel_cli.py  test_maildir_patches.py  test_patchreview.py  test_patchreview_git.py  test_paths.py  test_qemu.py  test_target.py
