[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kernel-scripts"
version = "0.1.0"
description = "Local Linux kernel build, rootfs, and QEMU boot workflow helper"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
kforge = "kbake.forge_cli:main"
kbake = "kbake.kernel_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"kbake.assets" = ["*"]
